# serie

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
hasura/: README
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/chris/tables/: public_pacsfiles_pacsfile.yaml  public_pacsfiles_pacsseries.yaml  tables.yaml
src/: main.py
src/hasura_chris_poc/: __init__.py  global_client.py
src/serie/: __init__.py  actions.py  clients.py  dicom_series_metadata.py  feed_name_template.py  global_client.py  match.py  models.py  resolved_pacs_series.py  router.py  series_file_pair.py  settings.py
tests/: conftest.py  e2e_config.py  e2e_setup_and_reset.py  helpers.py  test_clients.py  test_e2e.py  test_models.py  test_noop.py  uvicorn_test_server.py
tests/examples/: __init__.py  oxidicom_attempted_push_count.json  pacsfile6.json
