[project]
name = "serie"
version = "0.1.0"
description = "Specific Endpoints for Research Integration Events"
authors = [
    { name = "FNNDSC", email = "dev@babyMRI.org" }
]
dependencies = [
    "fastapi>=0.111.1",
    "aiochris~=0.5.0",
    "yarl>=1.9.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/serie"]
